--- a/student-bio.html
+++ b/student-bio.html
@@ -12,6 +12,17 @@
     <h2>Tim Morse</h2>
 
     <img width="300" src="red sox.jpg"/>
+
+    <br />
+    <br />
+
+    <h3>CONTACT INFO</h3>
+
+    <p>
+        <ul>
+            <li>Email: <a href="timmorse13@gmail.com">timmorse13@gmail.com</li>
+        </ul>
+    </p>
     
 </body>
 </html>
