--- a/student-bio.html
+++ b/student-bio.html
@@ -11,16 +11,22 @@
 
     <h2>Tim Morse</h2>
 
-    <img width="300" src="red sox.jpg"/>
+    <img width="300" src="redsox.jpg"/>
 
     <br />
     <br />
 
-    <h3>CONTACT INFO</h3>
+    <p>
+        This is a paragraph about me. I am writing this from a chair in los angeles, ca.
+    </p>
+
+    <h2>CONTACT INFO</h2>
 
     <p>
         <ul>
-            <li>Email: <a href="timmorse13@gmail.com">timmorse13@gmail.com</li>
+            <li><strong>Email:</strong> <a href="timmorse13@gmail.com">timmorse13@gmail.com</li>
+            <li><strong>Github:</strong> <a href="https://github.com/timmorse13">github.com/timmorse13</li>
+            <li><strong>Portfolio:</strong> <a href="#">NOTHING TO SEE HERE</li>
         </ul>
     </p>
     
