--- a/student-bio.html
+++ b/student-bio.html
@@ -11,7 +11,7 @@
 
     <h2>Tim Morse</h2>
 
-    <img width="300" src="redsox.jpg"/>
+    <img width="300" src="red sox.jpg"/>
 
     <br />
     <br />
@@ -24,9 +24,9 @@
 
     <p>
         <ul>
-            <li><strong>Email:</strong> <a href="timmorse13@gmail.com">timmorse13@gmail.com</li>
-            <li><strong>Github:</strong> <a href="https://github.com/timmorse13">github.com/timmorse13</li>
-            <li><strong>Portfolio:</strong> <a href="#">NOTHING TO SEE HERE</li>
+            <li><strong>Email:</strong> <a href="mailto:timmorse13@gmail.com">timmorse13@gmail.com</a></li>
+            <li><strong>Github:</strong> <a href="https://github.com/timmorse13">github.com/timmorse13</a></li>
+            <li><strong>Portfolio:</strong> <a href="#">NOTHING TO SEE HERE</a></li>
         </ul>
     </p>
     
